@@ -124,10 +124,14 @@ public class Category
         // Delete all products? Complain if at least one product exists?
     }
 
+
     public void jdoUpdate()
     {
     }
 
 
+    public void jdoBeforeCreate()
+    {
+    }
 }
             
